@@ -84,6 +84,13 @@ TEMPLATE_CONTEXT_PROCESSORS = ('satchmo_store.shop.context_processors.settings',
 
 ROOT_URLCONF = ''
 
+TEMPLATE_DIRS = (
+    # Put strings here, like "/home/html/django_templates" or "C:/www/django/templates".
+    # Always use forward slashes, even on Windows.
+    # Don't forget to use absolute paths, not relative paths.
+    os.path.join(DIRNAME,'templates'),
+)
+
 INSTALLED_APPS = (
     'django.contrib.sites',
     'satchmo_store.shop',
