@@ -1,0 +1,1 @@
+Place base.html and other templates here to customize your store.
