@@ -43,3 +43,4 @@ Changes
 - Changed the way payment modules are imported. Making way for django-bursar integration
 - Multiple fixes to paypal modules
 - Allow admins to choose whether tax is calculated based on the shipping or billing address
+- Refactor the templates and the way jquery is loaded. Will make it easier to switch jquery versions and hosting locations.
